Final Code Version

--- a/Expensive Housing Neighborhoods (2).ipynb
+++ b/Expensive Housing Neighborhoods (2).ipynb
@@ -1335,7 +1335,9 @@
   {
    "cell_type": "markdown",
    "id": "882d5b34-b34d-4d66-9e15-8b5907d543ed",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Our Results\n",
     "Based on our dataset and the script, it looks like Squirrel Hill North has the most expensive housing. This makes us think that Squirrel Hill might be one of the best neighborhoods overall, as it’s packed with homes in higher price ranges. With all the pricey houses there, it’s likely that the area is full of upgrades and modern features that make it stand out.\n",
